# sarkit-assurance

./: CHANGELOG.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: pypi.yml
data/: example-cphd-1.0.1.xml  example-cphd-1.1.0.xml  example-sicd-1.4.0.xml
sarkit_assurance/: _plot_metadata.py  cphd_plot_metadata.py  cphd_thumb.py  names.py  sicd_plot_metadata.py  sidd_thumb.py
tests/: conftest.py  test_cphd_plot_metadata.py  test_cphd_thumb.py  test_sicd_plot_metadata.py  test_sidd_thumb.py  utils.py
