[project]
name = "sarkit-assurance"
description = "Suite of SAR-related assurance tools in Python."
authors = [
    {name = "Valkyrie Systems Corporation", email = "info@govsco.com"},
]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]

dependencies = [
    "lxml>=5.1.0",
    "numpy>=1.26.3",
    "pyproj>=3.7.2",
    "sarkit>=1.3.0",
    "scipy>=1.15.1",
]

[project.optional-dependencies]
all = [
]

[dependency-groups]
test = [
    "nox>=2025.2.9",
]
doc = [
    "sphinx>=7.2.6",
    "numpydoc>=1.7.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinxcontrib-autoprogram>=0.1.9",
]
dev-lint = [
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "types-python-dateutil>=2.9.0",
]
dev-test = [
    "pytest>=7.4.4",
]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"
write_to = "sarkit_assurance/_version.py"
write_template = "__version__ = '{}'"

[tool.pdm]
distribution = true

[tool.ruff.lint]
select = [
    "E4",  # pycodestyle Import
    "E7",  # pycodestyle Statement
    "E9",  # pycodestyle Runtime
    "F",   # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "NPY",  # NumPy-specific
    "ISC", # flake8-implicit-str-concat
    "RUF022", # unsorted-dunder-all
]
preview = true

[[tool.mypy.overrides]]
module = [
    "astropy.*",
    "h5py.*",
    "lxml.*",
    "pyproj.*",
    "scipy.*",
    "shapely.*",
]
ignore_missing_imports = true

[project.urls]
Repository = "https://github.com/ValkyrieSystems/sarkit-assurance.git"
"Bug Tracker" = "https://github.com/ValkyrieSystems/sarkit-assurance/issues"
Changelog = "https://github.com/ValkyrieSystems/sarkit-assurance/blob/main/CHANGELOG.md"
