[project]
name = "sarkit-assurance"
description = "Suite of SAR-related assurance tools in Python."
authors = [
    {name = "Valkyrie Systems Corporation", email = "info@govsco.com"},
]
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = ["version"]

dependencies = [
    "lxml>=5.1.0",
    "numpy>=2.0.0",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "plotly>=6.5.2",
    "pyproj>=3.7.2",
    "sarkit>=1.3.0",
    "scipy>=1.15.1",
]

[project.optional-dependencies]
all = [
]

[dependency-groups]
test = [
    "nox>=2025.2.9",
]
dev-lint = [
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "types-python-dateutil>=2.9.0",
]
dev-test = [
    "aiohttp>=3.11",
    "pytest>=7.4.4",
    "smart_open[http]>=7.1.0",
]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"
write_to = "sarkit_assurance/_version.py"
write_template = "__version__ = '{}'"

[tool.pdm]
distribution = true

[tool.ruff.lint]
select = [
    "E4",  # pycodestyle Import
    "E7",  # pycodestyle Statement
    "E9",  # pycodestyle Runtime
    "F",   # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "NPY",  # NumPy-specific
    "ISC", # flake8-implicit-str-concat
    "RUF022", # unsorted-dunder-all
]
preview = true

[[tool.mypy.overrides]]
module = [
    "lxml.*",
    "pandas.*",
    "plotly.*",
    "pyproj.*",
    "scipy.*",
    "shapely.*",
    "smart_open.*",
]
ignore_missing_imports = true

[project.urls]
Repository = "https://github.com/ValkyrieSystems/sarkit-assurance.git"
"Bug Tracker" = "https://github.com/ValkyrieSystems/sarkit-assurance/issues"
Changelog = "https://github.com/ValkyrieSystems/sarkit-assurance/blob/main/CHANGELOG.md"
